[GPU Process] Assertion under RenderLayerCompositor::computeCompositingRequirements() https://bugs.webkit.org/show_bug.cgi?id=220375

Reviewed by Eric Carlson.

Source/WebCore:

`MediaPlayer` calls `HTMLMediaElement::mediaEngineWasUpdated()` when a media element
loads a new URL and `MediaPlayer::supportsAcceleratedRendering()` may change from
false to true at the same time. However, `HTMLMediaElement::mediaEngineWasUpdated()`
does not notify the renderer about the change in the same run loop. Instead, it
schedules a task to do that. This leads to a race condition that
`RenderLayerBacking::contentChanged(VideoChanged)` gets called after the compositing
update where `RenderLayerCompositor::canAccelerateVideoRendering()` returns true.
This happens because renderer checks `MediaPlayer::supportsAcceleratedRendering()`
in `RenderLayerCompositor::canAccelerateVideoRendering()`, which changes its value
when `MediaPlayer` calls `HTMLMediaElement::mediaEngineWasUpdated()`.

To fix this race condition, `HTMLMediaElement` needs to notify `RenderVideo` and
changes the `supportsAcceleratedRendering` property seen from renderer's perspective
in the same run loop. With this patch, `HTMLMediaElement` keeps a cached value of
`MediaPlayer::supportsAcceleratedRendering()`, and only updates its value when
`HTMLMediaElement` notifies the renderer. In addition, `RenderVideo` checks
`HTMLMediaElement::supportsAcceleratedRendering()` instead of
`MediaPlayer::supportsAcceleratedRendering()`, so that the renderer will
see the new value of `supportsAcceleratedRendering` and receive the content
change notification in the same run loop.

No new tests. Fix assertion failures in tests.

* html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaEngineWasUpdated):
(WebCore::HTMLMediaElement::clearMediaPlayer):
* html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::supportsAcceleratedRendering const):
* rendering/RenderVideo.cpp:
(WebCore::RenderVideo::paintReplaced):
(WebCore::RenderVideo::supportsAcceleratedRendering const):

Source/WebKit:

When "GPU Process: Media" is enabled, `MediaPlayer` will call `mediaPlayerEngineUpdated()`
three times when a media element tries to load a URL. The three calls happen at the
following time points:
1) `MediaPlayer` creates a `MediaPlayerPrivateRemote`.
2) `MediaPlayerPrivateRemote` receives the response of a "createMediaPlayer" message
from the GPU process and gets the initial configurations of the "remote" media player.
3) The `RemoteMediaPlayerProxy` creates a `MediaPlayerPrivate` in the GPU process and
notify the `MediaPlayerPrivateRemote` in the WebContent process.

The second call of `mediaPlayerEngineUpdated()` is unnecessary because the player's
configuration at that time is similar to `NullMediaPlayerPrivate`. This patch removes it.

For the third call of `mediaPlayerEngineUpdated()`, we have to make sure that
the `MediaPlayerPrivateRemote` has received the configuration update from the GPU
process before the call. Therefore, this patch removes the message
`MediaPlayerPrivateRemote::EngineUpdated`, and let `MediaPlayerPrivateRemote`
decide when to call `mediaPlayerEngineUpdated()`.

* GPUProcess/media/RemoteMediaPlayerManagerProxy.cpp:
(WebKit::RemoteMediaPlayerManagerProxy::createMediaPlayer):
* GPUProcess/media/RemoteMediaPlayerManagerProxy.h:
* GPUProcess/media/RemoteMediaPlayerManagerProxy.messages.in:
The `playerConfiguration` is meaningless in this step so we can remove it.

* GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::mediaPlayerEngineUpdated): Deleted.
* GPUProcess/media/RemoteMediaPlayerProxy.h:
* GPUProcess/media/cocoa/RemoteMediaPlayerProxyCocoa.mm:
(WebKit::RemoteMediaPlayerProxy::prepareForPlayback):

* WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
(WebKit::MediaPlayerPrivateRemote::MediaPlayerPrivateRemote):
(WebKit::MediaPlayerPrivateRemote::load):
(WebKit::MediaPlayerPrivateRemote::setConfiguration): Deleted.
(WebKit::MediaPlayerPrivateRemote::engineUpdated): Deleted.
* WebProcess/GPU/media/MediaPlayerPrivateRemote.h:
* WebProcess/GPU/media/MediaPlayerPrivateRemote.messages.in:

* WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::createRemoteMediaPlayer):

LayoutTests:

* platform/wk2/TestExpectations:


Canonical link: https://commits.webkit.org/235163@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274264 268f45cc-cd09-0410-ab3c-d52691b4dbfc