Source/WebCore/rendering/RenderVideo.cpp
@@ -229,7 +229,7 @@ void RenderVideo::paintReplaced(PaintInfo& paintInfo, const LayoutPoint& paintOf
 
     if (displayingPoster)
         paintIntoRect(paintInfo, rect);
-    else if (!videoElement().isFullscreen() || !mediaPlayer->supportsAcceleratedRendering()) {
+    else if (!videoElement().isFullscreen() || !videoElement().supportsAcceleratedRendering()) {
         if (paintInfo.paintBehavior.contains(PaintBehavior::FlattenCompositingLayers))
             context.paintFrameForMedia(*mediaPlayer, rect);
         else
@@ -294,9 +294,7 @@ LayoutUnit RenderVideo::minimumReplacedHeight() const
 
 bool RenderVideo::supportsAcceleratedRendering() const
 {
-    if (auto player = videoElement().player())
-        return player->supportsAcceleratedRendering();
-    return false;
+    return videoElement().supportsAcceleratedRendering();
 }
 
 void RenderVideo::acceleratedRenderingStateChanged()
